# nvim

./: .gitignore  README.md  chadrc.lua  highlights.lua  init.lua  mappings.lua  plugins.lua  pyproject.toml
configs/: lspconfig.lua  null-ls.lua  overrides.lua
configs/extras/: cmp.lua  conform.lua  copilot.lua  copilot_chat.lua  lint.lua  lspconfig.lua  noice.lua  quarto-nvim.lua  statuscol.lua  ufo.lua  yarepl.lua
ftplugin/: python.lua  quarto.lua
queries/python/: injections.scm
