[project]
name = "custom"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "cjber", email = "cjberragan@gmail.com" }
]
dependencies = [
    "pynvim>=0.5.0",
    "prompt-toolkit>=3.0.43",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "tiktoken>=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "custom:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/custom"]
